{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 77,
  "lineage": "437cc6d2-8d1c-7713-0955-e7bc1d8ec0e9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_gateway_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.136.221.214",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T22:42:26.404-08:00",
            "id": "projects/gcp-adventure-02/regions/us-central1/addresses/nat-gateway-static-ip-0",
            "name": "nat-gateway-static-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gcp-adventure-02",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/addresses/nat-gateway-static-ip-0",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/routers/private-internet-router"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.70.55.90",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T22:42:26.390-08:00",
            "id": "projects/gcp-adventure-02/regions/us-central1/addresses/nat-gateway-static-ip-1",
            "name": "nat-gateway-static-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gcp-adventure-02",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/addresses/nat-gateway-static-ip-1",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/routers/private-internet-router"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_instance_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.132.3.101",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T22:23:45.905-08:00",
            "id": "projects/gcp-adventure-02/regions/us-central1/addresses/public-instance-static-ip",
            "name": "public-instance-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gcp-adventure-02",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/addresses/public-instance-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/zones/us-central1-a/instances/public-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-30T17:06:53.899-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-adventure-02/global/firewalls/private-firewall",
            "log_config": [],
            "name": "private-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "priority": 1000,
            "project": "gcp-adventure-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/firewalls/private-firewall",
            "source_ranges": [
              "10.20.0.0/16",
              "10.21.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private-firewall"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-30T12:41:05.420-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-adventure-02/global/firewalls/public-firewall",
            "log_config": [],
            "name": "public-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "priority": 1000,
            "project": "gcp-adventure-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/firewalls/public-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public-firewall"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210420",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/zones/us-central1-a/disks/private-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-adventure-02/zones/us-central1-a/instances/private-instance",
            "instance_id": "840956803080222089",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "vgreen:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDC/gD4Muq+vdiyHoghzpFbANIjvdF/+XJFVD2JyuOToGVqeeYemWzufEPbVJHDE0yDPUtOizJ7aEji6DIiTLHdgDw8pDRcE5rXB5KuOQLQrCUXDeHi+wqjatpJMQzlzi5tsbm6kuFCajQ00vm4XY52EJZyO8lAhtgP8lDGMcIix+lM/qxfciC/5ifs0RUabbc/3wbaLwLxv2U413s5gUrBAqUPUp7ug6tKrqUO9BPTeTWR3ACkJBdswx5EyGU9IpT/TR9iXKo04184GXUPC1BZKnww6OsxL//N3OAelfA7PXiPBP3nVL9ifqv8nQc3BBDBzeOTGrCsyV2cg/bQHfLV/DLpagk/Nd5oeiMxZCZhwymIxFdZxB0WGjVan5qOv6DDKm2oLy4YHzNQy41W/OEcBqQ22Q7Q+UpA14AQ4riQKS [...]
            },
            "metadata_fingerprint": "ig_c8204ab8=",
            "name": "private-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
                "network_ip": "10.21.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/subnetworks/private",
                "subnetwork_project": "gcp-adventure-02"
              }
            ],
            "project": "gcp-adventure-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/zones/us-central1-a/instances/private-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private-firewall",
              "private-internet"
            ],
            "tags_fingerprint": "em2aa3Dmch8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210420",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/zones/us-central1-a/disks/public-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-adventure-02/zones/us-central1-a/instances/public-instance",
            "instance_id": "1358351885228780750",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "vgreen:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDC/gD4Muq+vdiyHoghzpFbANIjvdF/+XJFVD2JyuOToGVqeeYemWzufEPbVJHDE0yDPUtOizJ7aEji6DIiTLHdgDw8pDRcE5rXB5KuOQLQrCUXDeHi+wqjatpJMQzlzi5tsbm6kuFCajQ00vm4XY52EJZyO8lAhtgP8lDGMcIix+lM/qxfciC/5ifs0RUabbc/3wbaLwLxv2U413s5gUrBAqUPUp7ug6tKrqUO9BPTeTWR3ACkJBdswx5EyGU9IpT/TR9iXKo04184GXUPC1BZKnww6OsxL//N3OAelfA7PXiPBP3nVL9ifqv8nQc3BBDBzeOTGrCsyV2cg/bQHfLV/DLpagk/Nd5oeiMxZCZhwymIxFdZxB0WGjVan5qOv6DDKm2oLy4YHzNQy41W/OEcBqQ22Q7Q+UpA14AQ4riQKS [...]
            },
            "metadata_fingerprint": "ig_c8204ab8=",
            "name": "public-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.132.3.101",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
                "network_ip": "10.20.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/subnetworks/public",
                "subnetwork_project": "gcp-adventure-02"
              }
            ],
            "project": "gcp-adventure-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/zones/us-central1-a/instances/public-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public-firewall",
              "public-internet"
            ],
            "tags_fingerprint": "eRNx_c551Lo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.public_instance_static_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "mtu": 0,
            "name": "gcp-adventure-02-network",
            "project": "gcp-adventure-02",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network"
          },
          "dependencies": [
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/gcp-adventure-02/global/routes/private-internet-route",
            "name": "private-internet-route",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "gcp-adventure-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/routes/private-internet-route",
            "tags": [
              "private-internet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/gcp-adventure-02/global/routes/public-internet-route",
            "name": "public-internet-route",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "gcp-adventure-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/routes/public-internet-route",
            "tags": [
              "public-internet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "private_interet_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T19:05:41.999-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcp-adventure-02/regions/us-central1/routers/private-internet-router",
            "name": "private-internet-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "project": "gcp-adventure-02",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/routers/private-internet-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-adventure-02/us-central1/private-internet-router/private-nat",
            "min_ports_per_vm": 0,
            "name": "private-nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/addresses/nat-gateway-static-ip-0",
              "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/addresses/nat-gateway-static-ip-1"
            ],
            "project": "gcp-adventure-02",
            "region": "us-central1",
            "router": "private-internet-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_gateway_static_ip",
            "google_compute_router.private_interet_router",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T16:55:33.117-08:00",
            "gateway_address": "10.21.0.1",
            "id": "projects/gcp-adventure-02/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "10.21.0.0/16",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-adventure-02",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/subnetworks/private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T12:20:46.693-08:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/gcp-adventure-02/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "10.20.0.0/16",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/global/networks/gcp-adventure-02-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-adventure-02",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-adventure-02/regions/us-central1/subnetworks/public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}